queries file added

--- a/config.ini
+++ b/config.ini
@@ -26,11 +26,9 @@ port = 3306
 table_name = employees
 table_name2 = departments
 
-#below not used
-[database]
-host = localhost
-database = your_database
-user = your_username
-password = your_password
+[filename]
+employees = employees.csv
+departments = departments.csv
+
 
 
